@@ -13,6 +13,7 @@
 //
 
 #include <svp/compiler.h>
+#include <svp/delegate.h>
 
 // XIGNORE: *:*
 
@@ -21,10 +22,9 @@ sl_def(foo, void) { sl_break; } sl_enddef
 sl_def(t_main, void)
 {
   int r;
-  sl_family_t f;
-  sl_create(f,,,,,, void, foo);
+  sl_create(,,,,,, void, foo);
   sl_sync(r);
-  if (r == SVP_EBROKEN)
+  if (r == SVP_EXIT_BREAK)
     nop();
 }
 sl_enddef
